refactor: enhance application structure and improve API interactions
- Updated Router configuration in App.tsx to support new transition features.
- Refactored apiClient.ts to adjust base URL and enable withCredentials for API requests.

- Modified SupportSessionList component to handle user IDs as strings for consistency.
- Enhanced ProviderLogin and ProviderRegistration components with improved layout and error handling.
- Updated AuthContext to provide more informative error messages during login.

- Adjusted ProviderDashboard to fetch clients with pagination.

- Refactored services to utilize UUIDs for user and session identifiers.

- Improved SQL schema and data insertion scripts for better initialization and UUID support.